add some static files as well as proper links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <meta name="author" content="Bade Iriabho, Adrian Flannery, Division of Informatics, Department of Pathology, UAB">
     <title>UAB Bootstrap</title>
 
-
-	<link href="dist/css/tether/tether.min.css" rel="stylesheet">
-    <link href="dist/css/uab-bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="dist/css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +40,7 @@
 					    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" title="UAB-Medicine-Bootstrap">UAB Medicine Bootstrap</a>
 					    <ul class="dropdown-menu">
 					        <li>
-					            <a class="dropdown-item" href="#">Demo</a>
+					            <a class="dropdown-item" href="https://uabpathinformatics.github.io/Bootstrap4-UABMedicine-Theme">Demo</a>
 					        </li>
 					        <li>
 					            <a class="dropdown-item" href="https://github.com/UABPathInformatics/Bootstrap4-UABMedicine-Theme" target="_blank">Source</a>
@@ -693,8 +691,8 @@
             </div>
         </div>
     </div>
-    <script src="dist/js/jquery/jquery-2.1.4.min.js"></script>
-    <script src="dist/js/tether/tether.min.js"></script>
-    <script src="dist/js/uab-bootstrap/bootstrap.min.js"></script>
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script src="dist/js/tether.min.js"></script>
+	<script src="dist/js/bootstrap.min.js"></script>
   </body>
 </html>
