Uniform menu descriptions

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					            <a class="dropdown-item" href="https://uabpathinformatics.github.io/Bootstrap4-UABMedicine-Theme">Demo</a>
 					        </li>
 					        <li>
-					            <a class="dropdown-item" href="https://github.com/UABPathInformatics/Bootstrap4-UABMedicine-Theme" target="_blank">Source</a>
+					            <a class="dropdown-item" href="https://github.com/UABPathInformatics/Bootstrap4-UABMedicine-Theme" target="_blank">Source Files</a>
 					        </li>
 					        <li>
 					            <a class="dropdown-item" href="http://branding.uabmedicineblog.org/" target="_blank">UAB Medicine Brand Center</a>
